# LOGGER-APPLICATION

FINALLOGGER/: CMakeLists.txt  README.md  test
FINALLOGGER/Documentation/: .~lock.software design document.docx#  Design Document LTTS.doc  Project_Documentation.docx
FINALLOGGER/include/: EncDec.h  Header.h  Logger.h~  Server.h  TestCase.h
FINALLOGGER/src/: EncDec.cpp  Logger.cpp  Main.cpp  Server.cpp
